--- a/assign4/app/src/main/res/layout/activity_main.xml
+++ b/assign4/app/src/main/res/layout/activity_main.xml
@@ -1,68 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    tools:context=".MainActivity"
+    android:background="@color/sky_blue">
 
     <ImageView
-        android:id="@+id/imageViewLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imgAmazon"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
         android:src="@drawable/amazon_logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp"/>
+        android:contentDescription="@string/amazonLogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextEmail"
+    <View
+        android:id="@+id/horizontalLine"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/imageViewLogo"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="24dp"
-        android:hint="Email"
-        android:inputType="textEmailAddress" />
-
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextEmail"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:hint="Password"
-        android:inputType="textPassword" />
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextPassword"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="Log in" />
+        android:layout_height="3dp"
+        android:background="@color/lighter_gray"
+        app:layout_constraintTop_toBottomOf="@id/imgAmazon"/>
 
     <TextView
-        android:id="@+id/textViewForgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonLogin"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="Forgot your password?"
-        android:textColor="@color/colorPrimary" />
-
-    <Button
-        android:id="@+id/buttonLogin2"
+        android:id="@+id/topLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textViewForgotPassword"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="Create your Amazon account"
-         />
+        android:text="@string/label"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:padding="12dp"
+        app:layout_constraintTop_toBottomOf="@id/horizontalLine"
+        app:layout_constraintStart_toStartOf ="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/signInLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_in"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@id/topLabel"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/forgetLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/forgot_password"
+        android:textStyle="bold"
+        android:padding="20dp"
+        android:textColor="@color/blue_dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/signInLabel"
+        app:layout_constraintBottom_toBottomOf="@id/signInLabel" />
+
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/username"
+        android:inputType="textEmailAddress|phone"
+        android:background="@drawable/border_background_custom"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        tools:ignore="Autofill"
+        android:padding="15dp"
+        app:layout_constraintTop_toBottomOf="@id/signInLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:background="@drawable/border_background_custom"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:importantForAutofill="no"
+        app:layout_constraintTop_toBottomOf="@id/username"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <CheckBox
+        android:id="@+id/showPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/show_password"
+        android:layout_margin="5dp"
+        android:checked="true"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <CheckBox
+        android:id="@+id/keepSignIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/keep_sign"
+        android:layout_margin="5dp"
+        app:layout_constraintTop_toBottomOf="@id/showPassword"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/details"
+        android:textColor="@color/blue_dark"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@id/keepSignIn"
+        app:layout_constraintBottom_toBottomOf="@id/keepSignIn"
+        app:layout_constraintStart_toEndOf="@id/keepSignIn"/>
+
+    <Button
+        android:id="@+id/btnSignIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_in"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:padding="15dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/border_background_custom"
+        app:layout_constraintTop_toBottomOf="@id/keepSignIn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/newAmazonLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/new_amazon"
+        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"/>
+
+    <View
+        android:id="@+id/frontLine"
+        android:layout_width="100dp"
+        android:layout_height="3dp"
+        android:background="@color/darker_gray"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toTopOf="@id/newAmazonLabel"
+        app:layout_constraintBottom_toBottomOf="@id/newAmazonLabel"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <View
+        android:id="@+id/backLine"
+        android:layout_width="100dp"
+        android:layout_height="3dp"
+        android:background="@color/darker_gray"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toTopOf="@id/newAmazonLabel"
+        app:layout_constraintBottom_toBottomOf="@id/newAmazonLabel"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/btnNewAcc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/create_new"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:padding="15dp"
+        android:background="@drawable/border_background_custom"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@id/newAmazonLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/terms"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/terms"
+        android:textColor="@color/blue_dark"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:layout_margin="20dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/btnNewAcc" />
+
+    <TextView
+        android:id="@+id/copyRight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/copy_right"
+        android:textSize="12sp"
+        android:gravity="center_horizontal"
+        android:padding="2dp"
+        app:layout_constraintTop_toBottomOf="@id/terms"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
