--- a/assign4/app/src/main/res/layout/activity_main.xml
+++ b/assign4/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/username"
-        android:inputType="textEmailAddress|phone"
+        android:inputType="textEmailAddress"
         android:background="@drawable/border_background_custom"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:text="@string/show_password"
         android:layout_margin="5dp"
-        android:checked="true"
+        android:checked="false"
         app:layout_constraintTop_toBottomOf="@id/password"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -120,7 +120,7 @@
         app:layout_constraintBottom_toBottomOf="@id/keepSignIn"
         app:layout_constraintStart_toEndOf="@id/keepSignIn"/>
 
-    <Button
+    <TextView
         android:id="@+id/btnSignIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -129,7 +129,8 @@
         android:textColor="@color/black"
         android:padding="15dp"
         android:layout_margin="10dp"
-        android:background="@drawable/border_background_custom"
+        android:gravity="center_horizontal"
+        android:background="@drawable/btn_background_pri"
         app:layout_constraintTop_toBottomOf="@id/keepSignIn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -173,7 +174,7 @@
         android:textSize="20sp"
         android:textColor="@color/black"
         android:padding="15dp"
-        android:background="@drawable/border_background_custom"
+        android:background="@drawable/btn_background_sec"
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/newAmazonLabel"
         app:layout_constraintStart_toStartOf="parent"
